--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Jost", sans-serif;
 }
 
+.center{
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+}
+
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
@@ -116,9 +124,9 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px 0;
 }
 
-#header.header-scrolled, #header.header-inner-pages {
-  background: rgba(40, 58, 90, 0.9);
-}
+/* #header.header-scrolled, #header.header-inner-pages {
+  background: #34c0b2;
+} */
 
 #header .logo {
   font-size: 30px;
@@ -135,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -179,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #47b2e4;
+  color: #34c0b2;
 }
 
 .navbar .getstarted {
@@ -188,13 +196,13 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   color: #fff;
   font-size: 14px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #34c0b2;
   font-weight: 600;
 }
 
 .navbar .getstarted:hover {
   color: #fff;
-  background: #31a9e1;
+  background: #34c0b2;
 }
 
 .navbar .dropdown ul {
@@ -230,7 +238,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #47b2e4;
+  color: #34c0b2;
 }
 
 .navbar .dropdown:hover > ul {
@@ -293,7 +301,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(40, 58, 90, 0.9);
+  background: #34c0b2;
   transition: 0.3s;
   z-index: 999;
 }
@@ -321,16 +329,16 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a {
   padding: 10px 20px;
   font-size: 15px;
-  color: #37517e;
+  color: #34c0b2;
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #47b2e4;
+  color: #76b2ce;
 }
 
 .navbar-mobile .getstarted {
   margin: 15px;
-  color: #37517e;
+  color: #34c0b2;
 }
 
 .navbar-mobile .dropdown ul {
@@ -358,7 +366,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #47b2e4;
+  color: #34c0b2;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -371,7 +379,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #37517e;
+  background: #34c0b2;
 }
 
 #hero .container {
@@ -403,11 +411,11 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin: 10px 0 0 0;
   color: #fff;
-  background: #47b2e4;
+  background: #34c0b2;
 }
 
 #hero .btn-get-started:hover {
-  background: #209dd8;
+  background: #34c0b2;
 }
 
 #hero .btn-watch-video {
@@ -429,7 +437,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-watch-video:hover i {
-  color: #47b2e4;
+  color: #34c0b2;
 }
 
 #hero .animated {
@@ -1621,7 +1629,11 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: #37517e;
+  background: #34c0b2;
+}
+
+#logoft{
+  max-height: 100px
 }
 
 #footer .footer-newsletter {
@@ -1678,7 +1690,7 @@ section {
 }
 
 #footer .footer-top {
-  padding: 60px 0 30px 0;
+  padding: 10px 0 10px 0;
   background: #fff;
 }
 
@@ -1693,7 +1705,7 @@ section {
   line-height: 1;
   text-transform: uppercase;
   font-weight: 600;
-  color: #37517e;
+  color: #34c0b2;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1707,7 +1719,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #37517e;
+  color: #34c0b2;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1755,7 +1767,7 @@ section {
   font-size: 18px;
   display: inline-block;
   background: #47b2e4;
-  color: #fff;
+  color: black;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1768,14 +1780,14 @@ section {
 
 #footer .footer-top .social-links a:hover {
   background: #209dd8;
-  color: #fff;
+  color: black;
   text-decoration: none;
 }
 
 #footer .footer-bottom {
   padding-top: 30px;
   padding-bottom: 30px;
-  color: #fff;
+  color: black;
 }
 
 #footer .copyright {
